# podtime

./: .git-pre-commit  .gitignore  .hlint.yaml  LICENSE  Makefile  README.adoc  podtime.cabal  podtime.sh  stack.yaml
int-test/: IntegrationSpec.hs  SuccessFormatter.hs
podtime/: ChangeLog.md  README.md  package.yaml  podtime.cabal
podtime/src/: Main.hs
program/: Action.hs  CacheItemCSV.hs  Database.hs  Duration.hs  DurationParseError.hs  FileDurationCacheM.hs  GPodderDatabase.hs  LiftMonadDurationT.hs  LiftMonadModTimeT.hs  Main.hs  NoDurationCacheM.hs  OrphanInstances.hs  PureParserDurationM.hs  Stat.hs  XDGDir.hs
src/: AttoparsecExtra.hs  AudioDuration.hs  ConduitExtra.hs  GetDuration.hs  ID3.hs  ID3V1.hs  Lib.hs  M4A.hs  MP3.hs  MP3Original.hs  Main.hs
test/: AnySizedTag.hs  ConduitExtraSpec.hs  GetDurationSpec.hs  ID3Spec.hs  ID3V1Spec.hs  ID3V1ValidTag.hs  M4ASpec.hs  MP3Spec.hs  TestCommon.hs
test/Domain/: FrameSync.hs  ID3Tag.hs  MP3HeaderTypes.hs  MPEG1Types.hs  MPEG2Types.hs  MPEGHeaderTypes.hs
