cabal-version:       3.0
name:                podtime
version:             0.1.1.0
synopsis:            A tool that prints the total time of the unheard podcasts in a gPodder database.
homepage:            https://github.com/eunikolsky/podtime#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eugene Nikolsky
maintainer:          e@egeek.me
copyright:           2020 Eugene Nikolsky
category:            Audio
build-type:          Simple
extra-source-files:  README.adoc

common common-options
  build-depends:
      base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
      BinaryLiterals
    , DerivingStrategies
    , ImportQualifiedPost
    , NumericUnderscores
    , OverloadedStrings
    , TypeApplications
  -- most of the list is copied from summoner
  -- https://github.com/kowainik/summoner/blob/main/summoner-cli/examples/stack-full/stack-full.cabal
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-methods
                       -Wmissing-deriving-strategies
                       -Wunused-packages
                       -Werror=missing-fields
                       -Werror=incomplete-patterns
                       -Werror=incomplete-record-updates
                       -Werror=incomplete-uni-patterns
                       -Werror=missing-home-modules

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
      MP3
    , MP3Original
  build-depends:
      attoparsec
    , bytestring
    , megaparsec

executable podtime
  import:              common-options
  hs-source-dirs:      program
  main-is:             Main.hs
  other-modules:       Paths_podtime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      podtime
    , async
    , bytestring
    , directory
    , filepath
    , process
    , sqlite-simple
    , time

test-suite podtime-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
      MP3Spec
    , Domain.FrameSync, Domain.MP3HeaderTypes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , attoparsec
    , bytestring
    , containers
    , hspec
    , hspec-attoparsec
    , podtime
