cabal-version:       3.0
name:                podtime
version:             0.1.3.0
synopsis:            A tool that prints the total time of the new podcasts in a gPodder database.
homepage:            https://github.com/eunikolsky/podtime#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eugene Nikolsky
maintainer:          e@egeek.me
copyright:           2020 Eugene Nikolsky
category:            Audio
build-type:          Simple
extra-source-files:  README.adoc

common common-options
  build-depends:
      base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
      BinaryLiterals
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , NamedFieldPuns
    , NumericUnderscores
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications
  -- most of the list is copied from summoner
  -- https://github.com/kowainik/summoner/blob/main/summoner-cli/examples/stack-full/stack-full.cabal
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Wunused-packages
                       -Werror=empty-enumerations
                       -Werror=missing-methods
                       -Werror=missing-fields
                       -Werror=incomplete-patterns
                       -Werror=incomplete-record-updates
                       -Werror=incomplete-uni-patterns
                       -Werror=missing-home-modules

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
      ID3
    , MP3
    , MP3Original
  build-depends:
      attoparsec
    , bytestring
    , megaparsec

executable podtime
  import:              common-options
  hs-source-dirs:      program
  main-is:             Main.hs
  other-modules:       Paths_podtime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      podtime
    , async
    , bytestring
    , directory
    , filepath
    , process
    , raw-strings-qq
    , sqlite-simple
    , time

test-suite podtime-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
      MP3Spec
    , ID3Spec
    , TestCommon, AnySizedTag
    , Domain.FrameSync, Domain.ID3Tag
    , Domain.MP3HeaderTypes, Domain.MPEGHeaderTypes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , attoparsec
    , bytestring
    , containers
    , hspec
    , hspec-attoparsec
    , podtime
    , quickcheck-instances

test-suite integration-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      int-test
  -- very weird, but this `main-is` is not enough
  -- https://stackoverflow.com/questions/50659327/stack-build-results-in-output-was-redirected-with-o-but-no-output-will-be-gen/50659706#50659706
  main-is:             IntegrationSpec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -main-is IntegrationSpec
  build-depends:
      bytestring
    , directory
    , filepath
    , hspec
    , hspec-attoparsec
    , podtime
    , unicode-show
