name:                podtime
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/podtime#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable podtime
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_podtime
  build-depends:
      base >= 4.7 && < 5
    , directory
    , filepath
    , process
    , sqlite-simple
    , time
